<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minLines="1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/company"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/company"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/homeAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/homeAddress"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minLines="1"
        android:textSize="13sp" />

    <Button
        android:id="@+id/refer"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:background="@drawable/btn_flattening"
        android:text="@string/refer" />

</LinearLayout>