<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/balance"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="0.5"
            android:text="@string/balance" />

        <Button
            android:id="@+id/charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:text="@string/charge"
            android:background="@drawable/btn_flattening"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="10dp">
    <TextView
        android:id="@+id/earn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/earn" />
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="10dp">
    <TextView
        android:id="@+id/spend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/pay" />
    </android.support.v7.widget.CardView>
</LinearLayout>