<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kind"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/kind" />

        <Spinner
            android:id="@+id/kind_spinner_btn"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:entries="@array/kinds" />

    </LinearLayout>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/nickName" />

    <EditText
        android:id="@+id/describe"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:inputType="text"
        android:hint="@string/propertyInfo" />

    <Button
        android:id="@+id/refer"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_flattening"
        android:text="@string/refer" />

</LinearLayout>