<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/name"/>
            <android.support.v7.widget.AppCompatCheckedTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="20dp"
                android:hint="@string/name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="20dp"
                android:text="@string/phone"/>

            <android.support.v7.widget.AppCompatCheckedTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:paddingLeft="20dp"
                android:hint="@string/phone" />
        </LinearLayout></android.support.v7.widget.CardView>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <Button
        android:id="@+id/personInfo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_clicked"
        android:gravity="start"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="8dp"
        android:textSize="13sp"
        android:text="@string/personInfo" />

    <Button
        android:id="@+id/wallet"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_clicked"
        android:gravity="start"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="8dp"
        android:textSize="13sp"
        android:text="@string/wallet" />

    <Button
        android:id="@+id/property"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_clicked"
        android:gravity="left"
        android:paddingLeft="35dp"
        android:paddingTop="8dp"
        android:textSize="13sp"
        android:text="@string/property" />

    <Button
        android:id="@+id/authentication"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_clicked"
        android:gravity="start"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="8dp"
        android:textSize="13sp"
        android:text="@string/authentication" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_clicked"
        android:gravity="start"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="8dp"
        android:textSize="13sp"
        android:textColor="@color/logout"
        android:text="@string/logOut" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>